syntax = "proto3";

package grpc.health.v1;

option go_package = "github.com/h0n9/toybox/kistio/proto";

service kistio {
    rpc Publish(PublishRequest) returns (PublishResponse);
    rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse);
}

// Message
message PublishRequest {
    string topic = 1;
    bytes data = 2;
}

message PublishResponse {
    bool ok = 1;
}

message SubscribeRequest {
    string topic = 1;
}

message SubscribeResponse {
    bytes data = 1;
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

